
2009-08-09  Jérôme Laheurte  <jeromelaheurte@mac-mini-de-jerome-laheurte.local>
	* misc: Add a toolbar to the task list, with an add button and a sync button.
	  Display the category name in the navigation bar.
	* misc: Ensure consistency between dates.

2009-08-08  Jérôme Laheurte  <jeromelaheurte@mac-mini-de-jerome-laheurte.local>
    * misc: Display the day name when picking a date
	* misc: Fixed a number of small memory leaks, as well as a potential crash

2009-08-02  Jérôme Laheurte  <jeromelaheurte@mac-mini-de-jerome-laheurte.local>
	* misc: The user can now edit the categories associated with a task.


==== RELEASE 1.0 ====


2009-06-06  Jérôme Laheurte  <jeromelaheurte@mac-mini-de-jerome-laheurte.local>

	* misc: Use same font everywhere, with shadow.

	* TaskCellBig: Don't use italics.

	* misc: Fix some UI bugs when toggling editing mode

	* addtask.png: Change icon

	* Classes/TaskCell.m: Fix selection bug when confirming mark
	complete (2.2 specific).

	* TaskCell: fix overlapping views

2009-05-29  Jérôme Laheurte  <jeromelaheurte@mac-mini-de-jerome-laheurte.local>

	* Classes/Domain/Task.m: Started today tasks would show up as not started

	* taskcoach.sql, Task.m: Not started tasks wouldn't show up

2009-05-29  Jérôme Laheurte  <fraca7@free.fr>

	* fr.lproj/Localizable.strings: Fix french translation spelling

