@@ -13,7 +13,7 @@
 
 #define TASKSTATUS_UNDEFINED         0
 #define TASKSTATUS_OVERDUE           1
-#define TASKSTATUS_DUETODAY          2
+#define TASKSTATUS_DUESOON           2
 #define TASKSTATUS_STARTED           3
 #define TASKSTATUS_NOTSTARTED        4
 #define TASKSTATUS_COMPLETED         5
